syntax = "proto3";

option go_package = "github.com/molodoymaxim/jaeger_test/pay_grpc/api/v1/pay_grpc;paygrpc";

package pay_grpc;

service PayService {
  rpc Test(TestRequest) returns (TestResponse);
}

message TestRequest {}

message TestResponse {
  string message = 1;
}

